Add c.snippets with some debug print snippets

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -54,5 +54,8 @@
               "systemverilog"
           ]
       }
-  }
+  },
+  "snippets.ultinips.directories": [
+      "${HOME}/.config/nvim/ultispnips"
+  ]
 }
