Disable coc lua telemetry

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -57,5 +57,6 @@
   },
   "snippets.ultinips.directories": [
       "${HOME}/.config/nvim/ultispnips"
-  ]
+  ],
+  "Lua.telemetry.enable": false,
 }
