Add more words to coc cspell dictionary

--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,12 +1,19 @@
 {
   "cSpell.words": [
+    "Munif",
+    "Rishabh",
+    "Todoist",
     "Xuyuanp",
     "Yggdroot",
+    "chatgpt",
     "clangd",
     "cocstatus",
+    "eandrju",
     "fannheyward",
     "funcobj",
+    "gierens",
     "gruvbox",
+    "hdlcc",
     "honza",
     "iamcco",
     "itchyny",
@@ -20,18 +27,29 @@
     "neoclide",
     "prevchunk",
     "prevconflict",
+    "require'nvim",
+    "require'treesitter",
+    "rishabhrd",
+    "romgrk",
     "roxma",
     "scrooloose",
     "severin",
     "sheerun",
+    "struct",
+    "sumneko",
+    "suoto",
     "takac",
     "togglebg",
     "tpope",
     "udalov",
     "ultisnips",
+    "unstage",
     "weirongxu",
+    "yaegassy",
     "ycino",
-    "yuki"
+    "yuki",
+    "zindex",
+    "äöüß"
   ],
   "cSpell.enabled": true
 }
