feat(coc-settings.jcon): add typst lsp config
Signed-off-by: Sandro-Alessio Gierens <sandro@gierens.de>

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -53,7 +53,11 @@
               "verilog",
               "systemverilog"
           ]
-      }
+      },
+        "typst": {
+            "command": "typst-lsp",
+            "filetypes": ["typst"]
+        }
   },
   "snippets.ultinips.directories": [
       "${HOME}/.config/nvim/ultispnips"
